# Cursor

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  rules.mdc  start_system.sh
backend/api/: Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
backend/api/src/: config.py  database.py  models.py  schemas.py  services.py
backend/api/src/routers/: availability.py  bookings.py
backend/api/src/utils/: seed_data.py
backend/api/tests/: test_api.py
backend/nlp/: .dockerignore  .env  .env.example  BACKEND_API_EXPECTATIONS.txt  Dockerfile  NLP_MODULE_SUMMARY.txt  README.md  __init__.py  backend_requirements.txt  cli_test.py  config.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  rules.mdc  start.sh  test_models.py
backend/nlp/models/: __init__.py  email_models.py
backend/nlp/services/: __init__.py  email_processor.py  parameter_extractor.py  response_generator.py
backend/nlp/src/: agent_workflow.py  config.py  edge_cases.py  email_parser.py  intent_classifier.py  models.py  parameter_extractor.py
backend/nlp/tests/: test_email_parser.py
email-tests/: send_test_emails.py
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/booking/[slug]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/emails/: page.tsx
frontend/components/: dashboard-stats.tsx  premium-chart.tsx  premium-email-activity.tsx  premium-sidebar.tsx  premium-stats-card.tsx  recent-emails.tsx
frontend/lib/: store.ts  types.ts  utils.ts
